fixed layout issue

--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ a{
 .experience .lead , .experience .text-light{
     color: #444
 }
-.experience.container{
+.exp-container{
     padding: 1px 1px;
 }
 
